# git-toxic

./: .pre-commit-config.yaml  Makefile  pyproject.toml  readme.md  setup.py
git_toxic/: __init__.py  git.py  labels.py  pytest.py  toxic.py  util.py
src/git_toxic/: __init__.py  git.py  labels.py  toxic.py  util.py
