[project]
name = "git_toxic"
version = "0.1.0"
dependencies = ["pyfswatch @ git+https://github.com/paul-nameless/pyfswatch"]

[project.optional-dependencies]
dev = []

[project.scripts]
git-toxic = "git_toxic:entry_point"

[tool.black]
target-version = ["py312"]
preview = true
skip-magic-trailing-comma = true

[tool.isort]
profile = "black"
force_single_line = true
